// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GameMenus /> Snapshots has dialog when a dialog is active 1`] = `
<div
  className={undefined}
>
  
  
  <div
    className=""
    onClick={[Function]}
  >
    <div
      className={undefined}
    >
      <div>
        test dialog
      </div>
    </div>
  </div>
  <div
    className=""
  />
  
</div>
`;

exports[`<GameMenus /> Snapshots has hero menu when hero menu is opened snapshot 1`] = `
<div
  className={undefined}
>
  <div
    className=""
    style={
      Object {
        "left": 0,
        "top": 0,
      }
    }
  >
    <div
      className={undefined}
    />
    <div
      className={undefined}
    >
      <div
        className="menu-item"
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "background": "url(/sprites/hero-menu.png) no-repeat -40px 0",
              "height": 20,
              "width": 20,
            }
          }
        />
      </div>
      <div
        className="menu-item"
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "background": "url(/sprites/hero-menu.png) no-repeat 0 0",
              "height": 20,
              "width": 20,
            }
          }
        />
      </div>
    </div>
  </div>
  
  
  <div
    className=""
  />
  
</div>
`;

exports[`<GameMenus /> Snapshots has spell icon in hero menu when hero menu is opened and Hero has a spell snapshot 1`] = `
<div
  className={undefined}
>
  <div
    className=""
    style={
      Object {
        "left": 0,
        "top": 0,
      }
    }
  >
    <div
      className={undefined}
    >
      <div
        className="menu-item"
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "background": "url(/sprites/hero-menu.png) no-repeat -20px 0",
              "height": 20,
              "width": 20,
            }
          }
        >
          <span>
            1
          </span>
        </div>
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className="menu-item"
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "background": "url(/sprites/hero-menu.png) no-repeat -40px 0",
              "height": 20,
              "width": 20,
            }
          }
        />
      </div>
      <div
        className="menu-item"
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "background": "url(/sprites/hero-menu.png) no-repeat 0 0",
              "height": 20,
              "width": 20,
            }
          }
        />
      </div>
    </div>
  </div>
  
  
  <div
    className=""
  />
  
</div>
`;

exports[`<GameMenus /> Snapshots matches default snapshot 1`] = `
<div
  className={undefined}
>
  
  
  
  <div
    className=""
  />
  
</div>
`;
